header is ready

--- a/app/index.html
+++ b/app/index.html
@@ -23,7 +23,8 @@
 		<div class="container">
 				<div class="row">
 					<div class="col-lg-6">
-						<p>Внимание! Акция! До 31 мая бесплатный  прием репродуктолога<a href="#">Подробнее</a></p>
+						<p>Внимание! Акция! До 31 мая бесплатный  прием репродуктолога<span><a href="#">Подробнее</a></span></p>
+
 					</div><!-- /.col-lg-6 -->
 					<div class="col-lg-4 ml-auto">
 						<div class="selectcity">
@@ -36,21 +37,64 @@
        </select>
        <button class="clinic"><a href="#">Все клиники</a></button>
       </div><!-- /.selectcity -->
-
 					</div><!-- /.col-lg-4 -->
 				</div><!-- /.row -->
 			</div><!-- /.container -->
 		</div><!-- /.sale -->
-	<header>
+
+	<header class="header">
 		<div class="container">
-			<div class="row">
-				<div class="col-lg-5">
-					
-				</div><!-- /.col-lg-5 -->
+			<div class="row no-gutters">
+				<div class="col-lg-3">
+					<div class="logo">
+						<img src="img/logo.png" alt="header-logo">
+						<p>Белгород</p>
+					</div><!-- /.logo -->
+				</div><!-- /.col-lg-3 -->
+				<div class="col-lg-3">
+					<div class="location">
+						<address>
+							<img src="img/map.png" alt="map">
+							<p>Белгород,<br>ул. Красноармейская, д. 41, пом. 8</p>
+						</address>
+						<div class="time">
+							<img src="img/time.png" alt="time">
+							<p>Ежедневно <span>с 9:00 до 21:00</span></p>
+						</div><!-- /.work -->
+					</div><!-- /.address -->
+				</div><!-- /.col-lg-3 -->
+				<div class="col-lg-3">
+					<div class="info">
+						<button class="signing">
+							<img src="img/signing.png" alt="signing">
+							<a href="#">Записаться<br>на прием</a>
+						</button>
+						<button class="question">
+							<img src="img/question.png" alt="question">
+							<a href="#">Задать<br>вопрос</a>
+						</button>
+					</div><!-- /.info -->
+				</div><!-- /.col-lg-3 -->
+				<div class="col-lg-3">
+					<div class="phone">
+						<p class="phone__number">8 (800) 500-76-28</p>
+						<a href="#" class="phone__text">Обратный звонок</a>
+      <img src="img/smartphone.png" alt="smartphone">
+					</div><!-- /.phone -->
+				</div><!-- /.col-lg-3 -->
 			</div><!-- /.row -->
 		</div><!-- /.container -->
 	</header>
 
+ <section class="menu">
+ 	<div class="container">
+ 		<div class="row">
+ 			<div class="col-lg-12">
+ 				
+ 			</div><!-- /.col-lg-12 -->
+ 		</div><!-- /.row -->
+ 	</div><!-- /.container -->
+ </section><!-- /.menu -->
 
 
 
