section menu,slider is ready

--- a/app/index.html
+++ b/app/index.html
@@ -7,9 +7,11 @@
 	
  <!-- Bootstrap -->
 	<link rel="stylesheet" href="css/bootstrap.min.css">
-	<!--Fonts Googlle  
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Roboto:400,700,900|Source+Sans+Pro:300,400,700,900" rel="stylesheet">-->
+	<!--Fonts Googlle-->  
+	<link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
  
+  <!--Font Awesome  -->
+ <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
 
 	
 
@@ -90,11 +92,110 @@
  	<div class="container">
  		<div class="row">
  			<div class="col-lg-12">
- 				
+ 				<nav>
+ 					<ul class="menu-bar d-flex">
+ 						<li><a href="#">Цены</a></li>
+ 						<li><a href="#">Акции</a></li>
+ 						<li>
+ 							<input type="checkbox" name="toggle" class="toggleSubmenu" id="sub">
+ 							<a href="#">Услуги</a>
+ 							<label for="sub" class="toggleSubmenu"><i class="fas fa-angle-down"></i></label>
+        <ul class="sub">
+        	<li><a href="#">Суррогатное материнство</a></li>
+        	<li><a href="#">ИКСИ</a></li>
+        	<li><a href="#">Программы Эко</a></li>
+        	<li><a href="#">Криоконсервация</a></li>
+        	<li><a href="#">Урология</a></li>
+        	<li><a href="#">Инсеминация</a></li>
+        	<li><a href="#">Лечение бесполодия</a></li>
+        	<li><a href="#">Все о бесплодии</a></li>
+        	<li><a href="#">Лаборатория и диагностика</a></li>
+        	<li><a href="#">ЭКО</a></li>
+        	<li><a href="#">УЗИ</a></li>
+        	<li><a href="#">Донорская сперма</a></li>
+        	<li><a href="#">ЭКО по ОМС</a></li>
+        	<li><a href="#">Донорские яйцеклетки</a></li>
+        	<li><a href="#">Гинекология</a></li>
+        </ul>
+ 						</li>
+ 						<li><a href="#">Наши врачи</a></li>
+ 						<li><a href="#">Пациентам</a></li>
+ 						<li><a href="#">Донорам</a></li>
+ 						<li><a href="#">Вопрос-ответ</a></li>
+ 						<li><a href="#">Отзывы</a></li>
+ 						<li><a href="#">О клинике</a></li>
+ 						<li><a href="#">Контакты</a></li>
+ 					</ul>
+ 				</nav>
  			</div><!-- /.col-lg-12 -->
  		</div><!-- /.row -->
  	</div><!-- /.container -->
  </section><!-- /.menu -->
+
+ <section class="slider">
+ 	<div class="bg-services">
+ 		<div class="container">
+ 			<div class="row">
+ 				<div class="col-lg-2">
+ 					<div class="services">
+ 		    <img src="img/gender.png" alt="gender">
+ 						<a href="#">Лечение<br>бесплодия</a>
+ 					</div><!-- /.services -->	
+ 				</div><!-- /.col-lg-2 -->
+ 				<div class="col-lg-2">
+ 					<div class="services">
+ 		    <img src="img/tubes.png" alt="tubes">
+ 						<a href="#">Эко</a>
+ 					</div><!-- /.services -->	
+ 				</div><!-- /.col-lg-2 -->
+ 				<div class="col-lg-2">
+ 					<div class="services services_move">
+ 		    <img src="img/pregnant.png" alt="pregnant">
+ 						<a href="#">Сурагатное<br>материнство</a>
+ 					</div><!-- /.services -->	
+ 				</div><!-- /.col-lg-2 -->
+ 				<div class="col-lg-2">
+ 					<div class="services">
+ 		    <img src="img/certificate.png" alt="certificate">
+ 						<a href="#">Программы Эко</a>
+ 					</div><!-- /.services -->	
+ 				</div><!-- /.col-lg-2 -->
+ 				<div class="col-lg-2">
+ 					<div class="services">
+ 		    <img src="img/dna.png" alt="dna">
+ 						<a href="#">Эко по ОМС</a>
+ 					</div><!-- /.services -->	
+ 				</div><!-- /.col-lg-2 -->
+ 				<div class="col-lg-2">
+ 					<div class="services">
+ 		    <img src="img/molecules.png" alt="molecules">
+ 						<a href="#">Другие услуги</a>
+ 					</div><!-- /.services -->	
+ 				</div><!-- /.col-lg-2 -->
+ 			</div><!-- /.row -->
+ 		</div><!-- /.container -->
+ 	</div><!-- /.bg-services -->
+  <div class="container">	
+  	<div class="row">
+  	 <div class="col-lg-6">
+  	 	<div class="title">
+  	 		<h1><span>Бесплатный<br>прием</span> репродуктолога в клинике «Центр ЭКО»</h1>
+  	 	 <button class="title-btn btn-more"><a href="#">Подробнее</a></button>
+  	 	</div><!-- /.title -->
+  	 </div><!-- /.col-lg-6 -->
+  	</div><!-- /.row -->
+  	<div class="row">
+  	 	<div class="col-lg-12">
+  	 		<div class="rectangle d-flex justify-content-center">
+							<input type="radio" id="photo1" name="radio1">
+							<label for="photo1" class="rectangle__item label1"></label>
+							<input type="radio" id="photo2" name="radio1" checked><label for="photo2" class="rectangle__item label2"></label>
+							<input type="radio" id="photo3" name="radio1"><label for="photo3" class="rectangle__item label3"></label>
+				  </div><!-- /.rectangle -->
+  	 	</div><!-- /.col-lg-12 -->
+  	 </div><!-- /.row --> 
+  </div><!-- /.container -->
+ </section><!-- /.slider -->
 
 
 
