section about is ready

--- a/app/index.html
+++ b/app/index.html
@@ -196,7 +196,42 @@
   	 </div><!-- /.row --> 
   </div><!-- /.container -->
  </section><!-- /.slider -->
+ 
+ <section class="about">
+ 	<div class="container">
+ 		<div class="row no-gutters">
+ 			<div class="col-lg-3">
+ 				<div class="about__item">
+ 					<img src="img/trophy.png" alt="trophy">
+ 					<p><strong>Лидер ЭКО по ОМС</strong><br>
+ 						<span>в большинстве регионов</span> РФ</p>
+ 				</div><!-- /.about__item -->
+ 			</div><!-- /.col-lg-3 -->
+ 			<div class="col-lg-3">
+ 				<div class="about__item about__item_move">
+ 					<img src="img/time.png" alt="time">
+ 					<p><strong>15 Лет опыта</strong><br>
+ 					<span>в области репродукции</span></p>
+ 				</div><!-- /.about__item -->
+ 			</div><!-- /.col-lg-3 -->
+ 			<div class="col-lg-3">
+ 				<div class="about__item">
+ 					<img src="img/marketing.png" alt="marketing">
+ 					<p><strong>68,2% </strong><br>
+ 					<span>средняя результативность</span></p>
+ 				</div><!-- /.about__item -->
+ 			</div><!-- /.col-lg-3 -->
+ 			<div class="col-lg-3">
+ 				<div class="about__item">
+ 					<img src="img/atoms.png" alt="atoms">
+ 					<p><strong>22 Клиники ЭКО</strong><br>
+ 					<span class="about__item">в Российской Федерации</span></p>
+ 				</div><!-- /.about__item -->
+ 			</div><!-- /.col-lg-3 -->
+ 		</div><!-- /.row -->
 
+ 	</div><!-- /.container -->
+ </section><!-- /.about -->
 
 
 
