section our-service is ready

--- a/app/index.html
+++ b/app/index.html
@@ -178,10 +178,10 @@
   <div class="container">	
   	<div class="row">
   	 <div class="col-lg-6">
-  	 	<div class="title">
+  	 	<div class="slider-title">
   	 		<h1><span>Бесплатный<br>прием</span> репродуктолога в клинике «Центр ЭКО»</h1>
-  	 	 <button class="title-btn btn-more"><a href="#">Подробнее</a></button>
-  	 	</div><!-- /.title -->
+  	 	 <button class="slider-title__btn btn-more"><a href="#">Подробнее</a></button>
+  	 	</div><!-- /.slider-title -->
   	 </div><!-- /.col-lg-6 -->
   	</div><!-- /.row -->
   	<div class="row">
@@ -229,9 +229,120 @@
  				</div><!-- /.about__item -->
  			</div><!-- /.col-lg-3 -->
  		</div><!-- /.row -->
-
  	</div><!-- /.container -->
  </section><!-- /.about -->
+ 
+ <section class="our-services">
+ 	<div class="container">
+ 		<div class="row">
+ 			<div class="col-lg-12">
+ 				<div class="our-services-title">
+ 					<h2 class="title">Наши <span>услуги</span></h2>
+ 					<p>Клиника "Центр ЭКО" в Ростове-на-Дону оказывает помощь пациентам в диагностике и лечении женского и мужского бесплодия. Наши врачи проведут полное обследование и назначат все необходимые анализы. На основе полученных данных специалисты клиники составят для вас индивидуальную лечебную программу лечения с применением наиболее эффективных в вашем случае методов ВРТ. Главная задача "Центр ЭКО" - помочь всем нашим пациентам стать счастливыми родителями.</p>
+ 				</div><!-- /.our-services-title -->
+ 			</div><!-- /.col-lg-12 -->
+ 		</div><!-- /.row -->
+   <div class="row">
+    <div class="col-lg-3">
+    	<a href="#" class="eko services-block"> <!-- 1й блок -->
+    		<div class="eko__img services-block__img"></div>
+    			<img src="img/tubes.png" class="services-block__icon" alt="tubes">
+    			<p class="services-block__text">ЭКО</p>
+    	</a>
+    </div><!-- /.col-lg-3 -->
+    <div class="col-lg-3">
+    	<a href="#" class="omc services-block"> <!-- 2й блок -->
+    		<div class="omc__img services-block__img"></div>
+    			<img src="img/dna.png" class="services-block__icon" alt="dna">
+    			<p class="services-block__text">ЭКО по ОМС</p>
+    	</a>
+    </div><!-- /.col-lg-3 -->
+    <div class="col-lg-3">
+    	<a href="#" class="programm services-block"> <!-- 3й блок -->
+    		<div class="programm__img services-block__img"></div>
+    			<img src="img/certificate.png" class="services-block__icon" alt="certificate">
+    			<p class="services-block__text">Программы ЭКО</p>
+    	</a>
+    </div><!-- /.col-lg-3 -->
+    <div class="col-lg-3">
+    	<a href="#" class="surogat services-block"> <!-- 4й блок -->
+    		<div class="surogat__img services-block__img"></div>
+    			<img src="img/pregnant.png" class="services-block__icon" alt="pregnant">
+    			<p class="services-block__text">Сурогатное материнство</p>
+    	</a>
+    </div><!-- /.col-lg-3 -->
+   </div><!-- /.row --> 
+   <div class="row second-row">
+    <div class="col-lg-3">
+    	<a href="#" class="donor services-block"> <!-- 5й блок -->
+    		<div class="donor__img services-block__img"></div>
+    			<img src="img/sperm.png" class="services-block__icon" alt="tubes">
+    			<p class="services-block__text">Донорские программы</p>
+    	</a>
+    </div><!-- /.col-lg-3 -->
+    <div class="col-lg-3">
+    	<a href="#" class="ikci services-block"> <!-- 6й блок -->
+    		<div class="ikci__img services-block__img"></div>
+    			<img src="img/pregnancy.png" class="services-block__icon" alt="pregnancy">
+    			<p class="services-block__text">ИКСИ</p>
+    	</a>
+    </div><!-- /.col-lg-3 -->
+    <div class="col-lg-3">
+    	<a href="#" class="treatment services-block"> <!-- 7й блок -->
+    		<div class="treatment__img services-block__img"></div>
+    			<img src="img/gender.png" class="services-block__icon" alt="gender">
+    			<p class="services-block__text">Лечение бесплодия</p>
+    	</a>
+    </div><!-- /.col-lg-3 -->
+    <div class="col-lg-3">
+    	<a href="#" class="uro services-block"> <!-- 8й блок -->
+    		<div class="uro__img services-block__img"></div>
+    			<img src="img/male.png" class="services-block__icon" alt="male">
+    			<p class="services-block__text">Урология</p>
+    	</a>
+    </div><!-- /.col-lg-3 -->
+   </div><!-- /.row -->  
+   <div class="row third-row">
+    <div class="col-lg-3">
+    	<a href="#" class="lab services-block"> <!-- 9й блок -->
+    		<div class="lab__img services-block__img"></div>
+    			<img src="img/microscope.png" class="services-block__icon" alt="microscope">
+    			<p class="services-block__text">Лаборатория и диагностика</p>
+    	</a>
+    </div><!-- /.col-lg-3 -->
+    <div class="col-lg-3">
+    	<a href="#" class="frost services-block"> <!-- 10й блок -->
+    		<div class="frost__img services-block__img"></div>
+    			<img src="img/mercury.png" class="services-block__icon" alt="mercury">
+    			<p class="services-block__text">Криоконсервация</p>
+    	</a>
+    </div><!-- /.col-lg-3 -->
+    <div class="col-lg-3">
+    	<a href="#" class="uzi services-block"> <!-- 11й блок -->
+    		<div class="uzi__img services-block__img"></div>
+    			<img src="img/uzi.png" class="services-block__icon" alt="gender">
+    			<p class="services-block__text">УЗИ</p>
+    	</a>
+    </div><!-- /.col-lg-3 -->
+    <div class="col-lg-3">
+    	<a href="#" class="ginecology services-block"> <!-- 12й блок -->
+    		<div class="ginecology__img services-block__img"></div>
+    			<img src="img/female.png" class="services-block__icon" alt="female">
+    			<p class="services-block__text">Гинекология</p>
+    	</a>
+    </div><!-- /.col-lg-3 -->
+   </div><!-- /.row --> 
+   <div class="row">
+   	<div class="col-lg-12">
+   		
+   			<button class="services__btn btn-show"><a href="#">Показать все услуги</a><div class="btn-border"></div></button>
+   		
+   	</div><!-- /.col-lg-12 -->
+   </div>
+   <!-- /.row -->
+
+ 	</div><!-- /.container -->
+ </section><!-- /.services -->
 
 
 
