form search is ready

--- a/app/index.html
+++ b/app/index.html
@@ -125,8 +125,16 @@
  						<li><a href="#">Отзывы</a></li>
  						<li><a href="#">О клинике</a></li>
  						<li><a href="#">Контакты</a></li>
+       <button class="search-button"><i class="icon-search"></i></button>
  					</ul>
  				</nav>
+ 				<div id="sb" class="sb">
+ 				 <form>
+ 				  <input class="sb-input" placeholder="Введите текст поиска" type="search" value="" name="search" id="search">
+ 				  <button class="sb-cancel"><i class="icon-cancel"></i></button>
+ 				  <button class="sb-search"><i class="icon-search"></i></button>
+ 				 </form>
+ 				</div> 
  			</div><!-- /.col-lg-12 -->
  		</div><!-- /.row -->
  	</div><!-- /.container -->
