icon angle up and down in menu is work

--- a/app/index.html
+++ b/app/index.html
@@ -101,6 +101,7 @@
  							<input type="checkbox" name="toggle" id="services">
  							<label for="services">Услуги<i class="icon-angle-down services-icon"></i></label>
         <ul class="sub">
+        	<i class="icon-angle-up services-icon services-icon_up"></i>
         	<li><a href="#">Суррогатное материнство</a></li>
         	<li><a href="#">ИКСИ</a></li>
         	<li><a href="#">Программы Эко</a></li>
@@ -130,11 +131,11 @@
  				</nav>
  				<div id="sb" class="sb">
  				 <form>
- 				  <input class="sb-input" placeholder="Введите текст поиска" type="search" value="" name="search" id="search">
+ 				  <input class="sb-input" placeholder="Введите текст поиска" type="search" name="search" id="search">
  				  <button class="sb-cancel"><i class="icon-cancel"></i></button>
  				  <button class="sb-search"><i class="icon-search"></i></button>
  				 </form>
- 				</div> 
+ 				</div><!-- /.sb --> 
  			</div><!-- /.col-lg-12 -->
  		</div><!-- /.row -->
  	</div><!-- /.container -->
