work with section banner

--- a/app/index.html
+++ b/app/index.html
@@ -184,62 +184,7 @@
  			</div><!-- /.row -->
  		</div><!-- /.container -->
  	</div><!-- /.bg-services -->
-  <div class="container">	
-  	<div class="row">
-  	 <div class="col-lg-6">
-  	 	<div class="slider-title">
-  	 		<h1><span>Бесплатный<br>прием</span> репродуктолога в клинике «Центр ЭКО»</h1>
-  	 	 <button class="slider-title__btn btn-more"><a href="#">Подробнее</a></button>
-  	 	</div><!-- /.slider-title -->
-  	 </div><!-- /.col-lg-6 -->
-  	</div><!-- /.row -->
-  	<div class="row">
-  	 	<div class="col-lg-12">
-  	 		<div class="rectangle d-flex justify-content-center">
-							<input type="radio" id="photo1" name="radio1">
-							<label for="photo1" class="rectangle__item label1"></label>
-							<input type="radio" id="photo2" name="radio1" checked><label for="photo2" class="rectangle__item label2"></label>
-							<input type="radio" id="photo3" name="radio1"><label for="photo3" class="rectangle__item label3"></label>
-				  </div><!-- /.rectangle -->
-  	 	</div><!-- /.col-lg-12 -->
-  	 </div><!-- /.row --> 
-  </div><!-- /.container -->
  </section><!-- /.slider -->
- 
- <section class="about">
- 	<div class="container">
- 		<div class="row no-gutters">
- 			<div class="col-lg-3">
- 				<div class="about__item">
- 					<img src="img/trophy.png" alt="trophy">
- 					<p><strong>Лидер ЭКО по ОМС</strong><br>
- 						<span>в большинстве регионов</span> РФ</p>
- 				</div><!-- /.about__item -->
- 			</div><!-- /.col-lg-3 -->
- 			<div class="col-lg-3">
- 				<div class="about__item about__item_move">
- 					<img src="img/time.png" alt="time">
- 					<p><strong>15 Лет опыта</strong><br>
- 					<span>в области репродукции</span></p>
- 				</div><!-- /.about__item -->
- 			</div><!-- /.col-lg-3 -->
- 			<div class="col-lg-3">
- 				<div class="about__item">
- 					<img src="img/marketing.png" alt="marketing">
- 					<p><strong>68,2% </strong><br>
- 					<span>средняя результативность</span></p>
- 				</div><!-- /.about__item -->
- 			</div><!-- /.col-lg-3 -->
- 			<div class="col-lg-3">
- 				<div class="about__item">
- 					<img src="img/atoms.png" alt="atoms">
- 					<p><strong>22 Клиники ЭКО</strong><br>
- 					<span class="about__item">в Российской Федерации</span></p>
- 				</div><!-- /.about__item -->
- 			</div><!-- /.col-lg-3 -->
- 		</div><!-- /.row -->
- 	</div><!-- /.container -->
- </section><!-- /.about -->
  
  <section class="our-services">
  	<div class="container">
@@ -336,24 +281,89 @@
     <div class="col-lg-3">
     	<a href="#" class="ginecology services-block"> <!-- 12й блок -->
     		<div class="ginecology__img services-block__img"></div>
-    			<img src="img/female.png" class="services-block__icon" alt="female">
+    			<img src="img/pacifier.png" class="services-block__icon" alt="pacifier">
     			<p class="services-block__text">Гинекология</p>
     	</a>
     </div><!-- /.col-lg-3 -->
    </div><!-- /.row --> 
-   <div class="row">
-   	<div class="col-lg-12">
-   		
-   			<button class="services__btn btn-show"><a href="#">Показать все услуги</a><div class="btn-border"></div></button>
-   		
-   	</div><!-- /.col-lg-12 -->
-   </div>
-   <!-- /.row -->
-
+   <div class="row fourth-row">
+   	<div class="col-lg-3">
+    	<a href="#" class="besplodiya services-block"> <!-- 13й блок -->
+    		<div class="besplodiya__img services-block__img"></div>
+    			<img src="img/microscope.png" class="services-block__icon" alt="microscope">
+    			<p class="services-block__text">Все о бесплодии</p>
+    	</a>
+    </div><!-- /.col-lg-3 -->
+    <div class="col-lg-3">
+    	<a href="#" class="insemination services-block"> <!-- 14й блок -->
+    		<div class="insemination__img services-block__img"></div>
+    			<img src="img/pipette.png" class="services-block__icon" alt="pipette">
+    			<p class="services-block__text">Инсеминация</p>
+    	</a>
+    </div><!-- /.col-lg-3 -->
+    <div class="col-lg-3">
+    	<a href="#" class="oplodotvoreniye services-block"> <!-- 15й блок -->
+    		<div class="oplodotvoreniye__img services-block__img"></div>
+    			<img src="img/egg.png" class="services-block__icon" alt="egg">
+    			<p class="services-block__text">Донорские яйцеклетки</p>
+    	</a>
+    </div><!-- /.col-lg-3 -->
+    <div class="col-lg-3">
+    	<a href="#" class="sperma services-block"> <!-- 16й блок -->
+    		<div class="sperma__img services-block__img"></div>
+    			<img src="img/condom.png" class="services-block__icon services-block__icon_size" alt="condom">
+    			<p class="services-block__text">Донорская сперма</p>
+    	</a>
+    </div><!-- /.col-lg-3 -->
+   </div><!-- /.row -->
  	</div><!-- /.container -->
  </section><!-- /.services -->
 
+<section class="banner">
+	<div class="container">
+		<div class="row">
+			<div class="col-lg-12">
+				<div class="banner-img">
+					<div class="banner-content">
+						<p class="banner-content__text">Бесплатный прием репродуктолога<br> в клинике "Центр ЭКО" - <strong>только до 12 июля!</strong></p>
+						<p class="banner-content__tel">Запись по тел:<strong><span class="start"> +7(800)</span><span class="end"> 500-76-28</span></strong></p>
+						<small>Не упустите свой шанс стать счастливыми родителями!</small>
+					</div>
+					<!-- /.banner-content -->
+				</div><!-- /.banner-img -->
+			</div><!-- /.col-lg-12 -->
+		</div><!-- /.row -->
+		<div class="row">
+			<div class="col-lg-6">
+				<h2>ЭКО TV</h2>
+				<div class="tv d-flex">
+					<a href="#" class="love tv-block"> 
+    		<div class="love__img tv-block__img"></div>
+    			<img src="img/film.png" class="tv-block__icon" alt="film">
+    	</a>
+					<a href="#" class="zamershaja tv-block"> 
+    		<div class="zamershaja__img tv-block__img"></div>
+    			<img src="img/film.png" class="tv-block__icon" alt="film">
+    	</a>
+				</div><!-- /.tv -->
+			</div><!-- /.col-lg-6 -->
+			<div class="col-lg-6">
+				<h2>Наши базы</h2>
+				<div class="base d-flex">
+					<a href="#" class="oocit"> 
+    		<img src="img/excel.png" class="oocit__icon" alt="excel">
+    		<p class="oocit__text">База доноров ооцитов</p>
+    	</a>
+					<a href="#" class="oocit"> 
+    		<img src="img/excel.png" class="oocit__icon" alt="excel">
+    		<p class="oocit__text">База доноров спермы</p>
+    	</a>
+				</div><!-- /.base -->
+			</div><!-- /.col-lg-6 -->
 
+		</div><!-- /.row -->
+	</div><!-- /.container -->
+</section><!-- /.banner -->
 
 
 
