correct front-size

--- a/app/index.html
+++ b/app/index.html
@@ -154,7 +154,7 @@
  				<div class="col-lg-2">
  					<div class="services">
  		    <img src="img/tubes.png" alt="tubes">
- 						<a href="#">Эко</a>
+ 						<a href="#">ЭКО</a>
  					</div><!-- /.services -->	
  				</div><!-- /.col-lg-2 -->
  				<div class="col-lg-2">
@@ -166,7 +166,7 @@
  				<div class="col-lg-2">
  					<div class="services">
  		    <img src="img/certificate.png" alt="certificate">
- 						<a href="#">Программы Эко</a>
+ 						<a href="#">Программы ЭКО</a>
  					</div><!-- /.services -->	
  				</div><!-- /.col-lg-2 -->
  				<div class="col-lg-2">
@@ -189,8 +189,16 @@
  <section class="our-services">
  	<div class="container">
  		<div class="row">
+ 			<div class="col-lg-3">
+ 				<div class="breadcrumbs d-flex">
+ 					<p class="breadcrumbs__home"><a href="#">Главная</a></p>
+ 					<p class="breadcrumbs__services"><i class="icon-angle-right"></i>Наши услуги</p>
+ 				</div><!-- /.breadcrumbs -->
+ 			</div><!-- /.col-lg-3 -->
+ 		</div><!-- /.row -->
+ 		<div class="row">
  			<div class="col-lg-12">
- 				<div class="our-services-title">
+ 				<div class="services-title">
  					<h2 class="title">Наши <span>услуги</span></h2>
  					<p>Клиника "Центр ЭКО" в Ростове-на-Дону оказывает помощь пациентам в диагностике и лечении женского и мужского бесплодия. Наши врачи проведут полное обследование и назначат все необходимые анализы. На основе полученных данных специалисты клиники составят для вас индивидуальную лечебную программу лечения с применением наиболее эффективных в вашем случае методов ВРТ. Главная задача "Центр ЭКО" - помочь всем нашим пациентам стать счастливыми родителями.</p>
  				</div><!-- /.our-services-title -->
